tests/ui/fail/arguments/missing.stderr
error: missing arguments: "first-name", "last-name" for resource: "home" and key: "welcome"
 --> tests/ui/fail/arguments/missing.rs:6:36
  |
6 |     let _ = l10n::message!("home", "welcome");
  |                                    ^^^^^^^^^

error: missing arguments: "first-name", "last-name" for resource: "home" and key: "welcome"
 --> tests/ui/fail/arguments/missing.rs:7:36
  |
7 |     let _ = l10n::message!("home", "welcome", "extra" = "value");
  |                                    ^^^^^^^^^

error: missing arguments: "first-name", "last-name" for resource: "home" and key: "welcome"
  --> tests/ui/fail/arguments/missing.rs:11:33
   |
11 | #[l10n_message("home", "welcome")]
   |                                 ^

error: missing arguments: "last-name" for resource: "home" and key: "welcome"
  --> tests/ui/fail/arguments/missing.rs:15:75
   |
15 | #[l10n_message("home", "welcome", "first-name" = "Alan", "extra" = "value")]
   |                                                                           ^

error: missing arguments: "gender", "reason" for resource: "home" and key: "state.busy"
  --> tests/ui/fail/arguments/missing.rs:25:27
   |
25 |     #[l10n_message(".busy")]
   |                           ^

error: missing arguments: "gender" for resource: "home" and key: "state.busy"
  --> tests/ui/fail/arguments/missing.rs:38:68
   |
38 |     #[l10n_message(".busy", "reason" = "Working", "extra" = "value")]
   |                                                                    ^
